implements order statuses validation