@@ -11,22 +11,31 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import static java.util.stream.Collectors.toList;
+
 @ControllerAdvice
 public class CustomGlobalExceptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Object> handleException(MethodArgumentNotValidException e) {
-        Map<String, Object> body = new LinkedHashMap<>();
-        HttpStatus status = HttpStatus.BAD_REQUEST;
-        body.put("timestamp", LocalDateTime.now());
-        body.put("status", status.value());
-
         List<String> errors = e
                 .getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(x -> x.getField() + " - " + x.getDefaultMessage())
-                .toList();
+                .collect(toList());
+        return handleError(HttpStatus.BAD_REQUEST, errors);
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<Object> handleIllegalArgumentException(IllegalArgumentException e) {
+        return handleError(HttpStatus.BAD_REQUEST, List.of(e.getMessage()));
+    }
+
+    private static ResponseEntity<Object> handleError(HttpStatus status, List<String> errors) {
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("timestamp", LocalDateTime.now());
+        body.put("status", status.value());
         body.put("errors", errors);
         return new ResponseEntity<>(body, status);
     }
